===================================
gnome-commander 1.2.8.5
---------------

Bug fixes:
 * Fixed problem #604558 (cursor lost/placed in wrong position)
 * Fixed problem #604904 (build error on OpenSolaris)
 * Fixed problem with editing connections to Windows network
 * Fixed problem with nonexistent user actions


===================================
gnome-commander 1.2.8.4
---------------

Bug fixes:
 * Fixed problem #602916 (not working menu entry)
 * Fixed problem #603301 (crash when cancelling symlink creation by ESC)
 * Fixed Ubuntu problem #369818 (incorrect sorting by size in panel)
 * Fixed problem with not working keypad enter in copy/move dialog
 * Fixed problem with stalled keyboard after ALT+1/2 with hidden device list


===================================
gnome-commander 1.2.8.3
---------------

Bug fixes:
 * Fixed problem #541891 (file names with % in advanced file rename tool)
 * Fixed problem #581645 (uncomfortable quick search)
 * Fixed problem #596768 (build warnings for python)
 * Fixed problem #596973 (documentation build error)
 * Fixed problem #597144 (missing call to pclose)
 * Fixed problem #597233 (validating of doc translations)
 * Fixed problem #597890 (wrong arguments passed to meld)
 * Fixed problem #598278 (memory leak)


===================================
gnome-commander 1.2.8.2
---------------

Bug fixes:
 * Fixed problem #591944 (permissions set to 000 after chmod)
 * Fixed problem #595097 (build error for poppler >= 0.11.3)
 * Fixed debian problem #438884 (wrong device label when switching panels with CTRL+U)
 * Fixed problem with broken file icon after renaming a symbolic link


===================================
gnome-commander 1.2.8.1
---------------

Bug fixes:
 * Fixed problem #587325 (crash in a clean chroot environment)
 * Fixed problem #589108 (build error on openSUSE)
 * Fixed problem #591206 (crash while sysconf() on FreeBSD)
 * Fixed problem with $c(16) counter formatting in advanced file rename templates

